fix ui-menu detail overflow

--- a/layout/menu-detail.scss
+++ b/layout/menu-detail.scss
@@ -68,6 +68,7 @@ $menu-border: $border !default;
 
 	> ui-detail {
 		grid-area: detail;
+		overflow-y: auto;
 	}
 }
 	
